branch_15: Interim commit.

--- a/src/controlflowgraph/Makefile.am
+++ b/src/controlflowgraph/Makefile.am
@@ -25,9 +25,11 @@ libcontrolflowgraph_a_SOURCES = \
 	ControlFlowGraph.cpp ControlFlowGraph.h \
 	ControlFlowGraphTraversalBase.cpp ControlFlowGraphTraversalBase.h \
 	ControlFlowGraphTraversalDFS.cpp ControlFlowGraphTraversalDFS.h \
+	DescriptorBaseClass.cpp DescriptorBaseClass.h \
 	Edge.cpp Edge.h \
 	Graph.cpp Graph.h \
 	Vertex.cpp Vertex.h \
+	VertexDescriptor.cpp VertexDescriptor.h \
 	VertexID.cpp VertexID.h
 
 #	ControlFlowGraphTemplateHelper.h \#
@@ -42,7 +44,8 @@ GTESTDIR = /home/Gary/src/gtest-1.6.0
 check_LIBRARIES =  libcontrolflowgraphtest.a
 libcontrolflowgraphtest_a_SOURCES = \
 	GraphTest.cpp GraphTest.h \
-	ControlFlowGraph_test.cpp
+	ControlFlowGraph_test.cpp \
+	VertexDescriptor_test.cpp
 libcontrolflowgraphtest_a_CPPFLAGS = -I $(GTESTDIR)/include -I $(GTESTDIR) -I $(top_srcdir)/src/debug_utils $(AM_CPPFLAGS)
 libcontrolflowgraphtest_a_CFLAGS = $(AM_CFLAGS)
 libcontrolflowgraphtest_a_CXXFLAGS = $(AM_CXXFLAGS)
