branch_15: Builds again.  Passes additional tests.

--- a/src/controlflowgraph/Makefile.am
+++ b/src/controlflowgraph/Makefile.am
@@ -28,6 +28,7 @@ libcontrolflowgraph_a_SOURCES = \
 	DescriptorBaseClass.cpp DescriptorBaseClass.h \
 	Edge.cpp Edge.h \
 	Graph.cpp Graph.h \
+	GraphAdapter.h \
 	Vertex.cpp Vertex.h \
 	VertexDescriptor.cpp VertexDescriptor.h \
 	VertexID.cpp VertexID.h
