Issue: #4 Some rework to SparsePropertyMap and RemainingInDegreeMap.  SparsePropertyMap is now a Boost ReadWritePropertyMap, and RemainingInDegreeMap is getting close to being able to be merged with it (probably an instantiation of it).

--- a/src/controlflowgraph/Makefile.am
+++ b/src/controlflowgraph/Makefile.am
@@ -28,7 +28,6 @@ libcontrolflowgraph_a_SOURCES = \
 	Edge.cpp Edge.h \
 	Graph.cpp Graph.h \
 	GraphAdapter.cpp GraphAdapter.h \
-	Metagraph.cpp Metagraph.h \
 	Vertex.cpp Vertex.h \
 	VertexID.cpp VertexID.h
 
@@ -44,8 +43,7 @@ GTESTDIR = /home/Gary/src/gtest-1.6.0
 check_LIBRARIES =  libcontrolflowgraphtest.a
 libcontrolflowgraphtest_a_SOURCES = \
 	GraphTest.cpp \
-	ControlFlowGraph_test.cpp \
-	Metagraph_test.cpp
+	ControlFlowGraph_test.cpp
 	
 libcontrolflowgraphtest_a_CPPFLAGS = -I $(GTESTDIR)/include -I $(GTESTDIR) -I $(top_srcdir)/src/debug_utils $(AM_CPPFLAGS)
 libcontrolflowgraphtest_a_CFLAGS = $(AM_CFLAGS)
