Issue: #4 ---------- Bugtraq Message ---------- issue #4: C/C++ Task: Fix up topologic_visit_kahn.h to work with new FunctionCall linking mechanism. -------------------------------------
Added a new class, WriteGraphvizDotFileVisitor, which doesn't require a VertexAndEdgeListGraph, but only something that's traversable via a DFS.

--- a/src/controlflowgraph/visitors/Makefile.am
+++ b/src/controlflowgraph/visitors/Makefile.am
@@ -22,7 +22,8 @@ BackEdgeFixupVisitor.cpp BackEdgeFixupVisitor.h \
 	ControlFlowGraphOutputVisitor.cpp ControlFlowGraphOutputVisitor.h \
 	MergeNodeInsertionVisitor.cpp MergeNodeInsertionVisitor.h \
 	ImprovedDFSVisitorBase.h \
-	ReachabilityVisitor.cpp ReachabilityVisitor.h
+	ReachabilityVisitor.cpp ReachabilityVisitor.h \
+	WriteGraphvizDotFileVisitor.cpp WriteGraphvizDotFileVisitor.h 
 
 # Propagate any AM_*FLAGS to the per-target flags.
 # We need to do this because per the Automake manual, "In compilations with per-target flags,
