--- a/src/controlflowgraph/Makefile.am
+++ b/src/controlflowgraph/Makefile.am
@@ -32,20 +32,16 @@ libcontrolflowgraph_a_SOURCES = \
 	Vertex.cpp Vertex.h \
 	VertexID.cpp VertexID.h
 
-#	ControlFlowGraphTemplateHelper.h \#
-#	FilteredGraph.cpp FilteredGraph.h \#
-
 libcontrolflowgraph_a_CPPFLAGS = -I $(top_srcdir)/src/debug_utils $(AM_CPPFLAGS)
 libcontrolflowgraph_a_CFLAGS = $(AM_CFLAGS)
 libcontrolflowgraph_a_CXXFLAGS = $(AM_CXXFLAGS)
 
 # Unit tests.
-GTESTDIR = /home/Gary/src/gtest-1.6.0
 check_LIBRARIES =  libcontrolflowgraphtest.a
 libcontrolflowgraphtest_a_SOURCES = \
 	GraphTest.cpp \
 	ControlFlowGraph_test.cpp
 	
-libcontrolflowgraphtest_a_CPPFLAGS = -I $(GTESTDIR)/include -I $(GTESTDIR) -I $(top_srcdir)/src/debug_utils $(AM_CPPFLAGS)
+libcontrolflowgraphtest_a_CPPFLAGS = -I $(GTEST_ROOT)/include -I $(GTEST_ROOT) -I $(top_srcdir)/src/debug_utils $(AM_CPPFLAGS)
 libcontrolflowgraphtest_a_CFLAGS = $(AM_CFLAGS)
 libcontrolflowgraphtest_a_CXXFLAGS = $(AM_CXXFLAGS)
