--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -16,25 +16,12 @@
 # CoFlo.  If not, see <http://www.gnu.org/licenses/>.
 
 # Subdirectories with their own Makefile{.am}'s.
-SUBDIRS = controlflowgraph debug_utils libexttools
+SUBDIRS = controlflowgraph debug_utils libexttools parsers
 
-# Make sure to distribute the Doxygen configuration file and the parser built source.
+# Make sure to distribute the Doxygen configuration file.
 EXTRA_DIST = Doxyfile 
-# @todo Currently we need to have DParser installed in order to build (need its library), so there's
-# not much point in distributing the .cpp files it generates.  We'll put this back once we figure out how to
-# avoid the configure-time dependency on an installed DParser.
-#$(srcdir)/gcc_gimple_parser.cpp
 
-# The generated parser .cpp files should not normally be cleaned.  Make them maintainer-clean files.
-# @todo Put this back once we figure out how to avoid the configure-time dependency on an installed DParser.  For now we're
-# always building them, so they go in MOSTLYCLEANFILES.
-#MAINTAINERCLEANFILES = $(srcdir)/gcc_gimple_parser.cpp
-MOSTLYCLEANFILES = gcc_gimple_parser.cpp gcc_gimple_parser.g.gdebug
-
-# The Automake rules for the CoFlo executable.
-bin_PROGRAMS = coflo
-coflo_SOURCES = main.cpp \
-	Function.cpp Function.h \
+COMMONSOURCES = Function.cpp Function.h \
 	Location.cpp Location.h \
 	Program.cpp Program.h \
 	ResponseFileParser.cpp ResponseFileParser.h \
@@ -42,18 +29,15 @@ coflo_SOURCES = main.cpp \
 	SuccessorTypes.h \
 	TranslationUnit.cpp TranslationUnit.h \
 	UEI.cpp UEI.h \
-	safe_enum.h \
-	\
-	gcc_gimple_parser.g gcc_gimple_parser.h
-	
-# Path to the make_dparser executable.
-PROG_ABSPATH_MAKE_DPARSER = $(abs_top_builddir)/third_party/make_dparser
-# Flags for make_dparser.
-DPARSER_FLAGS = --verbose=2 --debug --ext=cpp --grammar_ident=gcc_gimple_parser
+	safe_enum.h
+
+# The Automake rules for the CoFlo executable.
+bin_PROGRAMS = coflo
+coflo_SOURCES = main.cpp $(COMMONSOURCES)
 
 # Collect all the Boost libraries we found into a single variable.
 if BOOST_USE_BUILT_BOOST
-BOOST_LOCAL_LIB = $(abs_top_builddir)/third_party/$(BOOST_TARBALL_DIRNAME)/stage/lib
+BOOST_LOCAL_LIB = $(top_builddir)/third_party/$(BOOST_TARBALL_DIRNAME)/stage/lib
 ALLBOOSTLIBS = $(BOOST_LOCAL_LIB)/libboost_graph.a \
 	$(BOOST_LOCAL_LIB)/libboost_program_options.a \
 	$(BOOST_LOCAL_LIB)/libboost_regex.a \
@@ -66,7 +50,18 @@ ALLBOOSTLIBS = $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_REGEX_LIB) $(BOOST_SYSTEM_LI
 #ALLBOOSTLIBS = $(BOOST_PROGRAM_OPTIONS_LIBS) $(BOOST_REGEX_LIBS) $(BOOST_SYSTEM_LIBS) $(BOOST_FILESYSTEM_LIBS)
 endif
 
-coflo_CPPFLAGS = -I $(abs_top_builddir)/third_party/dparser/local/include -I $(abs_top_srcdir)/src/debug_utils \
+NORMALLIBS = ./controlflowgraph/algorithms/libalgorithms.a \
+	./parsers/libparsers.a \
+	./controlflowgraph/analysis/libanalysis.a \
+	./controlflowgraph/statements/libstatements.a \
+	./controlflowgraph/edges/libedges.a \
+	./controlflowgraph/visitors/libvisitors.a \
+	./controlflowgraph/libcontrolflowgraph.a \
+	./debug_utils/libdebugutils.a \
+	./libexttools/libexttools.a \
+	$(top_builddir)/third_party/dparser/local/lib/libdparse.a
+
+coflo_CPPFLAGS = -I $(top_builddir)/third_party/dparser/local/include -I $(top_srcdir)/src/debug_utils \
 	$(BOOST_TR1_CPPFLAGS) $(BOOST_CPPFLAGS) $(AM_CPPFLAGS) 
 coflo_CFLAGS = $(AM_CFLAGS)
 coflo_CXXFLAGS = $(AM_CXXFLAGS)
@@ -75,30 +70,31 @@ coflo_CXXFLAGS = $(AM_CXXFLAGS)
 coflo_LDFLAGS = $(BOOST_LIBTOOL_FLAGS) $(BOOST_LDFLAGS) \
 	$(BOOST_PROGRAM_OPTIONS_LDFLAGS) $(BOOST_REGEX_LDFLAGS) $(BOOST_SYSTEM_LDFLAGS) $(BOOST_FILESYSTEM_LDFLAGS) \
 	$(AM_LDFLAGS)
-coflo_LDADD = ./controlflowgraph/analysis/libanalysis.a \
-	./controlflowgraph/libcontrolflowgraph.a \
-	./controlflowgraph/statements/libstatements.a \
-	./controlflowgraph/edges/libedges.a \
-	./controlflowgraph/visitors/libvisitors.a \
-	./debug_utils/libdebugutils.a \
-	./libexttools/libexttools.a \
-	$(top_builddir)/third_party/dparser/local/lib/libdparse.a \
-	$(ALLBOOSTLIBS)
+coflo_LDADD = $(NORMALLIBS) $(ALLBOOSTLIBS)
 
-# Suffix for DParser grammars.
-SUFFIX = .g
 
-# Rule to make *.cpp from *.g using DParser.
-# Note:
-# - The output file (*.cpp) is built source, but we don't want the user to have to have dparser installed,
-# so it is created under $(srcdir) and gets distributed.
-# - @TODO Actually, at the moment we're going to require the user to have DParser, so we won't do either.
-# - The intermediate file in the rule below, *.g.gdebug, is generated under $(bindir) so as not to cause "make distcheck" to fail.
-.g.cpp:
-	TARGET="$$(basename "$@")" && \
-	SOURCE="$(srcdir)/$$(basename "$<")" && \
-	INTER="$$(basename "$<").gdebug" && \
-	"$(PROG_ABSPATH_MAKE_DPARSER)" $(DPARSER_FLAGS) "$${SOURCE}" --output="$${INTER}" && \
-	"$(SED)" -r -e 's/\(void\*\)([a-zA-Z_][a-zA-Z0-9_]+)/static_cast<void*>\(\1\)/g' "$${INTER}" > "$${TARGET}-temp" && \
-	mv "$${TARGET}-temp" "$${TARGET}"
+###
+### Automake rules for the coflotest unit test executable.
+###
 
+TESTLIBS = ./controlflowgraph/libcontrolflowgraphtest.a
+
+# For Google Test, we need the following to be defined by configure:
+# - GTEST_ROOT: The directory of source distribution.
+
+gtest-all.cc: $(GTEST_ROOT)/src/gtest-all.cc
+	cp $< $@
+
+BUILT_SOURCES = gtest-all.cc
+MOSTLYCLEANFILES = gtest-all.cc
+check_PROGRAMS = coflotest
+coflotest_SOURCES = coflotest.cpp $(COMMONSOURCES)
+nodist_coflotest_SOURCES = gtest-all.cc
+coflotest_CPPFLAGS = -I $(GTEST_ROOT)/include -I $(GTEST_ROOT) -I $(top_builddir)/third_party/dparser/local/include -I $(top_srcdir)/src/debug_utils \
+	$(BOOST_TR1_CPPFLAGS) $(BOOST_CPPFLAGS) $(AM_CPPFLAGS) 
+coflotest_CFLAGS = $(CPPUNIT_CFLAGS) $(AM_CFLAGS)
+coflotest_CXXFLAGS = $(AM_CXXFLAGS)
+coflotest_LDFLAGS = $(BOOST_LIBTOOL_FLAGS) $(BOOST_LDFLAGS) \
+	$(BOOST_PROGRAM_OPTIONS_LDFLAGS) $(BOOST_REGEX_LDFLAGS) $(BOOST_SYSTEM_LDFLAGS) $(BOOST_FILESYSTEM_LDFLAGS) \
+	$(AM_LDFLAGS)
+coflotest_LDADD = $(TESTLIBS) $(CPPUNIT_LIBS) $(NORMALLIBS) $(ALLBOOSTLIBS)
