--- a/src/controlflowgraph/analysis/Makefile.am
+++ b/src/controlflowgraph/analysis/Makefile.am
@@ -24,9 +24,9 @@ libanalysis_a_SOURCES = \
 	
 # Propagate any AM_*FLAGS to the per-target flags.
 # We need to do this because per the Automake manual, "In compilations with per-target flags,
-# the ordinary ‘AM_’ form of the flags variable is not automatically included in the compilation
+# the ordinary "AM_" form of the flags variable is not automatically included in the compilation
 # (however, the user form of the variable is included)."
-libanalysis_a_CPPFLAGS = -I $(abs_top_srcdir)/src -I $(abs_top_srcdir)/src/debug_utils $(AM_CPPFLAGS)
+libanalysis_a_CPPFLAGS = -I $(top_srcdir)/src -I $(top_srcdir)/src/debug_utils $(AM_CPPFLAGS)
 libanalysis_a_CFLAGS = $(AM_CFLAGS)
 libanalysis_a_CXXFLAGS = $(AM_CXXFLAGS)
 
