--- a/src/controlflowgraph/visitors/Makefile.am
+++ b/src/controlflowgraph/visitors/Makefile.am
@@ -20,14 +20,16 @@ libvisitors_a_SOURCES = \
 BackEdgeFixupVisitor.cpp BackEdgeFixupVisitor.h \
 	ControlFlowGraphVisitorBase.cpp ControlFlowGraphVisitorBase.h \
 	ControlFlowGraphOutputVisitor.cpp ControlFlowGraphOutputVisitor.h \
+	FunctionCFGVisitor.cpp FunctionCFGVisitor.h \
 	MergeNodeInsertionVisitor.cpp MergeNodeInsertionVisitor.h \
 	ImprovedDFSVisitorBase.h \
-	ReachabilityVisitor.cpp ReachabilityVisitor.h
+	ReachabilityVisitor.cpp ReachabilityVisitor.h \
+	WriteGraphvizDotFileVisitor.cpp WriteGraphvizDotFileVisitor.h 
 
 # Propagate any AM_*FLAGS to the per-target flags.
 # We need to do this because per the Automake manual, "In compilations with per-target flags,
-# the ordinary ‘AM_’ form of the flags variable is not automatically included in the compilation
+# the ordinary AM_ form of the flags variable is not automatically included in the compilation
 # (however, the user form of the variable is included)."
-libvisitors_a_CPPFLAGS = -I $(abs_top_srcdir)/src/controlflowgraph -I $(abs_top_srcdir)/src/debug_utils $(AM_CPPFLAGS)
+libvisitors_a_CPPFLAGS = -I $(top_srcdir)/src/controlflowgraph -I $(top_srcdir)/src/debug_utils $(AM_CPPFLAGS)
 libvisitors_a_CFLAGS = $(AM_CFLAGS)
 libvisitors_a_CXXFLAGS = $(AM_CXXFLAGS)
