Issue: #5 ---------- Bugtraq Message ---------- issue #5: Add direct parsing of source files. -------------------------------------
To allow coexistence of DParser and ANTLR parsers, renamed gcc_gimple_parser.g to gcc_gimple_parser.dparser.g, changed build rules accordingly.

--- a/src/parsers/Makefile.am
+++ b/src/parsers/Makefile.am
@@ -15,23 +15,30 @@
 # You should have received a copy of the GNU General Public License along with
 # CoFlo.  If not, see <http://www.gnu.org/licenses/>.
 
+ANTLRPARSERSRCS = coflo_c_parser.g
+ANTLRBUILTSRC = $($(ANTLRPARSERSRCS):.g=.tokens) \
+	$($(ANTLRPARSERSRCS):.g=Lexer.hpp) \
+	$($(ANTLRPARSERSRCS):.g=Lexer.cpp) \
+	$($(ANTLRPARSERSRCS):.g=Parser.hpp) \
+	$($(ANTLRPARSERSRCS):.g=Parser.cpp)
+ANTLRCPPINCDIR = '/home/Gary/src/antlr_cpp_target/include'
 
 # Make sure to distribute the parser built source.
 # @todo Currently we need to have DParser installed in order to build (need its library), so there's
 # not much point in distributing the .cpp files it generates.  We'll put this back once we figure out how to
 # avoid the configure-time dependency on an installed DParser.
-#EXTRA_DIST = $(srcdir)/gcc_gimple_parser.cpp
+#EXTRA_DIST = $(srcdir)/gcc_gimple_parser.cpp $(srcdir)/coflo_c_parser.cpp
 
 # The generated parser .cpp files should not normally be cleaned.  Make them maintainer-clean files.
 # @todo Put this back once we figure out how to avoid the configure-time dependency on an installed DParser.  For now we're
 # always building them, so they go in MOSTLYCLEANFILES.
-#MAINTAINERCLEANFILES = $(srcdir)/gcc_gimple_parser.cpp
-MOSTLYCLEANFILES = gcc_gimple_parser.cpp gcc_gimple_parser.g.gdebug
+#MAINTAINERCLEANFILES = $(srcdir)/gcc_gimple_parser.cpp $(srcdir)/coflo_c_parser.cpp
+MOSTLYCLEANFILES = gcc_gimple_parser.cpp gcc_gimple_parser.g.gdebug $(ANTLRBUILTSRC) 
 
 noinst_LIBRARIES = libparsers.a 
-libparsers_a_SOURCES = gcc_gimple_parser.g gcc_gimple_parser.h
+libparsers_a_SOURCES = gcc_gimple_parser.g gcc_gimple_parser.h $(ANTLRPARSERSRCS)
 libparsers_a_CPPFLAGS = -I $(top_srcdir)/src -I $(top_builddir)/third_party/dparser/local/include -I $(top_srcdir)/src/debug_utils \
-	$(BOOST_TR1_CPPFLAGS) $(BOOST_CPPFLAGS) $(AM_CPPFLAGS)
+	$(BOOST_TR1_CPPFLAGS) $(BOOST_CPPFLAGS) -I $(ANTLRCPPINCDIR) $(AM_CPPFLAGS)
 libparsers_a_CFLAGS = $(AM_CFLAGS)
 libparsers_a_CXXFLAGS = $(AM_CXXFLAGS)
 
@@ -41,7 +48,9 @@ PROG_ABSPATH_MAKE_DPARSER = $(top_builddir)/third_party/make_dparser
 DPARSER_FLAGS = --verbose=2 --debug --ext=cpp
 
 # Suffix for DParser grammars.
-SUFFIX = .g
+SUFFIXES = .dparser.g .g
+# Suffixes for ANTLR grammars.
+SUFFIXES += .tokens Lexer.cpp Lexer.hpp Parser.cpp Parser.hpp 
 
 # Rule to make *.cpp from *.g using DParser.
 # Note:
@@ -49,7 +58,7 @@ SUFFIX = .g
 # so it is created under $(srcdir) and gets distributed.
 # - @TODO Actually, at the moment we're going to require the user to have DParser, so we won't do either.
 # - The intermediate file in the rule below, *.g.gdebug, is generated under $(bindir) so as not to cause "make distcheck" to fail.
-.g.cpp:
+.dparser.g.cpp:
 	BASENAME="$$(basename "$<" .g)" && \
 	TARGET="$$(basename "$@")" && \
 	SOURCE="$(srcdir)/$$(basename "$<")" && \
@@ -57,4 +66,16 @@ SUFFIX = .g
 	"$(PROG_ABSPATH_MAKE_DPARSER)" $(DPARSER_FLAGS) --grammar_ident=$${BASENAME} "$${SOURCE}" --output="$${INTER}" && \
 	"$(SED)" -r -e 's/\(void\*\)([a-zA-Z_][a-zA-Z0-9_]+)/static_cast<void*>\(\1\)/g' "$${INTER}" > "$${TARGET}-temp" && \
 	mv "$${TARGET}-temp" "$${TARGET}"
+
+# Rules to make a *.cpp file from a *.g file using ANTLRv3.4.
+#coflo_c_parser.g.stamp_cpp_files_generated: coflo_c_parser.g
+#	@: org.antlr.Tool
+#	java -jar 'C:\cygwin\bin_java\antlr-3.4-with-cpp\antlr-3.4-with-cpp.jar' '$<' -report
+	
+%.tokens %Lexer.cpp %Lexer.hpp %Parser.cpp %Parser.hpp: %.g
+	java -jar 'C:\cygwin\bin_java\antlr-3.4-with-cpp\antlr-3.4-with-cpp.jar' '$<' -report
+
+# Rule to make dependencies for ANTLR parsers.
+#.g.ANTLRdeps:
+#	java -jar 'C:\cygwin\bin_java\antlr-3.4-with-cpp\antlr-3.4-with-cpp.jar' '$<' -depend
 
