--- a/src/parsers/Makefile.am
+++ b/src/parsers/Makefile.am
@@ -15,46 +15,68 @@
 # You should have received a copy of the GNU General Public License along with
 # CoFlo.  If not, see <http://www.gnu.org/licenses/>.
 
+DPARSER_BUILTSRC = $(srcdir)/gcc_gimple_parser.cpp
 
 # Make sure to distribute the parser built source.
 # @todo Currently we need to have DParser installed in order to build (need its library), so there's
 # not much point in distributing the .cpp files it generates.  We'll put this back once we figure out how to
 # avoid the configure-time dependency on an installed DParser.
-#EXTRA_DIST = $(srcdir)/gcc_gimple_parser.cpp
+EXTRA_DIST = $(srcdir)/gcc_gimple_parser.cpp
 
 # The generated parser .cpp files should not normally be cleaned.  Make them maintainer-clean files.
 # @todo Put this back once we figure out how to avoid the configure-time dependency on an installed DParser.  For now we're
 # always building them, so they go in MOSTLYCLEANFILES.
 #MAINTAINERCLEANFILES = $(srcdir)/gcc_gimple_parser.cpp
-MOSTLYCLEANFILES = gcc_gimple_parser.cpp gcc_gimple_parser.g.gdebug
+MOSTLYCLEANFILES = $(DPARSER_BUILTSRC)
 
+#BUILT_SOURCES = $(DPARSER_BUILTSRC)
 noinst_LIBRARIES = libparsers.a 
-libparsers_a_SOURCES = gcc_gimple_parser.g gcc_gimple_parser.h
-libparsers_a_CPPFLAGS = -I $(top_srcdir)/src -I $(top_builddir)/third_party/dparser/local/include -I $(top_srcdir)/src/debug_utils \
+libparsers_a_SOURCES = gcc_gimple_parser.dparser.g gcc_gimple_parser.h
+libparsers_a_CPPFLAGS = -I $(top_srcdir)/src $(DPARSER_CPPFLAGS) -I $(top_srcdir)/src/debug_utils \
 	$(BOOST_TR1_CPPFLAGS) $(BOOST_CPPFLAGS) $(AM_CPPFLAGS)
-libparsers_a_CFLAGS = $(AM_CFLAGS)
-libparsers_a_CXXFLAGS = $(AM_CXXFLAGS)
+libparsers_a_CFLAGS = -Wno-missing-field-initializers $(AM_CFLAGS)
+libparsers_a_CXXFLAGS = -Wno-missing-field-initializers -Wno-unused-parameter $(AM_CXXFLAGS)
 
-# Path to the make_dparser executable.
-PROG_ABSPATH_MAKE_DPARSER = $(top_builddir)/third_party/make_dparser
+# Path to the make_dparser executable is PROG_ABSPATH_MAKE_DPARSER,
+# which is set at configure time.
+#PROG_ABSPATH_MAKE_DPARSER = $(top_builddir)/third_party/make_dparser
 # Flags for make_dparser.
-DPARSER_FLAGS = --verbose=2 --debug --ext=cpp
+DPARSER_FLAGS = --verbose=2 --debug=2 --ext=cpp
 
 # Suffix for DParser grammars.
-SUFFIX = .g
+SUFFIXES = .dparser.g .dparser.g.gdebug
 
-# Rule to make *.cpp from *.g using DParser.
+# Rule to make *.cpp from *.dparser.g using DParser.
 # Note:
 # - The output file (*.cpp) is built source, but we don't want the user to have to have dparser installed,
 # so it is created under $(srcdir) and gets distributed.
 # - @TODO Actually, at the moment we're going to require the user to have DParser, so we won't do either.
 # - The intermediate file in the rule below, *.g.gdebug, is generated under $(bindir) so as not to cause "make distcheck" to fail.
-.g.cpp:
-	BASENAME="$$(basename "$<" .g)" && \
+.dparser.g.cpp:
+	set -e; rm -f '$@'; \
+	BASENAME="$$(basename "$<" .dparser.g)" && \
 	TARGET="$$(basename "$@")" && \
-	SOURCE="$(srcdir)/$$(basename "$<")" && \
+	SOURCE="$$(basename "$<")" && \
 	INTER="$$(basename "$<").gdebug" && \
-	"$(PROG_ABSPATH_MAKE_DPARSER)" $(DPARSER_FLAGS) --grammar_ident=$${BASENAME} "$${SOURCE}" --output="$${INTER}" && \
-	"$(SED)" -r -e 's/\(void\*\)([a-zA-Z_][a-zA-Z0-9_]+)/static_cast<void*>\(\1\)/g' "$${INTER}" > "$${TARGET}-temp" && \
-	mv "$${TARGET}-temp" "$${TARGET}"
+	"$(PROG_ABSPATH_MAKE_DPARSER)" $(MAKE_DPARSER_FLAGS) --grammar_ident=$${BASENAME} "$(srcdir)/$${SOURCE}" \
+		--output="$(builddir)/$${INTER}" && \
+	"$(SED)" -r -e 's/\(void\*\)([a-zA-Z_][a-zA-Z0-9_]+)/static_cast<void*>\(\1\)/g' "$(builddir)/$${INTER}" > "$(builddir)/$${TARGET}-temp" && \
+	mv "$(builddir)/$${TARGET}-temp" "$(srcdir)/$${TARGET}"
+	:;# cd "$(srcdir)" && 
+
+# Generate dependencies.
+#.dparser.g.dparser.g.d:
+#	set -e; rm -f '$@' && \
+#	BASENAME="$$(basename "$<" .dparser.g)" && \
+#	echo -n "$${BASENAME}.cpp $@: $< " > '$@-temp' && \
+#	$(EGREP) '^include[ ]+' '$<' | \
+#	tr '\n' ' ' | \
+#	"$(SED)" -r 's,include[ ]+,,g' | \
+#	"$(SED)" -r 's,\"([^\"]*)\",\"\$$\(srcdir\)/\1\",g' >> '$@-temp' && \
+#	echo; echo '\t
+#	mv '$@-temp' '$@'
+#
+#-include $(libparsers_a_SOURCES:.dparser.g=.dparser.g.d)
+
+
 
