Issue #16: Interim commit.  WriteGraphvizDotFileVisitor no longer prints the filename part of the location of each CFG vertex.

--- a/src/coflo.conf.in
+++ b/src/coflo.conf.in
@@ -19,5 +19,8 @@
 ### Programs found during configure.
 ###
 
+# The default compiler.
+PROG_ABSPATH_COMPILER='@PROG_ABSPATH_COMPILER@'
+
 # The Graphviz dot program.
 PROG_ABSPATH_DOT='@PROG_ABSPATH_DOT@'
