Issue #16: Interim commit.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -25,6 +25,8 @@ EXTRA_DIST = Doxyfile coflo.conf.in
 
 # The /etc/coflo.conf file.
 dist_sysconf_DATA = coflo.conf
+# The template files.
+nobase_dist_pkgdata_DATA = templates/css/index.css
 
 # Source files common to both the normal CoFlo and the coflotest executables.
 COMMONSOURCES = Function.cpp Function.h \
